--- a/usuarios/templates/usuarios/detail.html
+++ b/usuarios/templates/usuarios/detail.html
@@ -3,11 +3,16 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Detalhe</title>
 </head>
 <body>
-    {% for key, value in usuario %}
-        <p>{{ key }}: {{ value }}</p>
-    {% endfor %}
+    <h1>Detalhes do usuario:</h1>
+    <p>Nome: {{ usuario.first_name }}</p>
+    <p>Sobrenome: {{ usuario.last_name }}</p>
+    <p>Email: {{ usuario.email }}</p>
+    <p>Idade: {{ usuario.age }}</p>
+    <p>Nascimento: {{ usuario.birth_date }}</p>
+    <p>Telefone: {{ usuario.phone }}</p>
+    <a href="{% url 'usuarios:listar' %}"><button>Voltar</button></a>
 </body>
 </html>
