--- a/usuarios/templates/usuarios/register.html
+++ b/usuarios/templates/usuarios/register.html
@@ -19,5 +19,7 @@
         <button type="submit">Cadastrar</button>
 
     </form>
+    
+    <button><a href="{% url 'usuarios:home' %}">Voltar</a></button>
 </body>
 </html>
